# Hode_Web

./: CMakeLists.txt  README.md
3p/inih/: ini.c  ini.h
3p/inih/cpp/: INIReader.cpp  INIReader.h
3p/inih/examples/: INIReaderExample.cpp  config.def  ini_dump.c  ini_example.c  ini_xmacros.c
3p/inih/tests/: unittest.c  unittest_string.c
3p/libxbr-standalone/: filters.h  hq2x.c  hq3x.c  hq4x.c  internal_hqx_common.h  test_app.c  xbr.c
3p/res/: template.xml
public/: hode.html  hode.js  index.html
res/: Dark_hod.lvl  Dark_hod.mst  Dark_hod.sss  Fort_hod.lvl  Fort_hod.mst  Fort_hod.sss  Hode.ini  Isld_hod.mst  Lar1_hod.lvl  Lar1_hod.mst  Lar2_hod.lvl  Lar2_hod.mst  Lava_hod.lvl  Lava_hod.mst  Pwr1_hod.mst  Pwr2_hod.lvl  Pwr2_hod.mst  Rock_hod.mst  Setup.cfg
src/: fs_android.cpp  game.cpp  main.cpp  paf.cpp  resource.cpp  scaler_xbr.cpp  system_sdl2.cpp
